app-deployment-ssl.yaml
# flight-central-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-central-ssl-service
  namespace: ingress-nginx
  labels:
    app: flight-central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-central
  template:
    metadata:
      labels:
        app: flight-central
    spec:
      containers:
        - name: flight-central
          image: 156041400647.dkr.ecr.us-east-1.amazonaws.com/flight-central:latest
          ports:
            - containerPort: 8090
          livenessProbe:
            httpGet:
              path: /
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

---
# flight-central-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-central-service
  namespace: default
spec:
  selector:
    app: flight-central
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
  type: ClusterIP
