flight-central-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-central-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: k8s-ingressn-ingressn-bcc72657b7-ccc6294442f9b45b.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight-central-service
                port:
                  number: 80
